--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,4 +1,4 @@
-body {
+body { 
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -17,7 +17,11 @@ body {
   font-size: 22px;
 }
 
-.confirm {
+.para.small-para {
+  font-size: 14px;
+}
+
+#confirm-button {
   background: green;
   color: white;
   font-weight: bold;
@@ -39,4 +43,9 @@ div.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
+}
+
+.text .child {
+  font-weight: bold;
+  font-size: 14px;
 }
