--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -2,6 +2,18 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+.photos {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.barberry {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+}
+
 img {
   width: 100px;
   height: 100px;
@@ -10,6 +22,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
 }
 
 /* do not edit this footer */
