not the exact same but looks close enough

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -2,7 +2,7 @@
 
 html, body {
   height: 100%;
-}
+} 
 
 body {
   font-family: Roboto, sans-serif;
@@ -19,7 +19,10 @@ body {
   background: white;
   width: 480px;
   border-radius: 10px;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .icon {
@@ -33,6 +36,27 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 1 1 auto;
+  flex-shrink: 0;
+  margin: 15px;
+}
+
+.center {
+  display: flex;
+  flex: 1 1 auto;
+  width: 400px;
+  margin: 5px;
+  flex-direction: column;
+  align-items:center;
+  margin: 15px;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content:start;
+  flex: 1 1 auto;
+  width: 320px;
 }
 
 .close-button {
@@ -48,6 +72,8 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  align-self: flex-start;
+  margin: 15px;
 }
 
 button {
@@ -66,4 +92,8 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.text {
+  margin: 10px;
 }
