--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,73 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: larger;
 }
 
+h1 {
+  margin: 10px;
+}
+ 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  margin-top: auto;
+  text-align: center;
+}
+
+.middle {
+  display: flex;
+  flex-direction: row;
+  height: auto;
+  flex-basis: 100%;
+  min-height: 82vh;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  margin-right: auto;
+  flex-shrink: 0.2;
+}
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  min-height: 82vh;
+  flex-wrap: wrap;
 }
 
 .card {
+  display:flex;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 320px;
+  padding: 20px;
+  margin: 20px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  margin: 50 0;
+}
+
+li {
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
