--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -3,12 +3,16 @@ html {
   height: 100%;
   margin: 0;
 }
-
+ 
 .container {
   text-align: center;
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, 2fr), repeat(4, 1fr), repeat(1, 2fr);
+  gap: 15px;
 }
 
 .container div {
@@ -22,22 +26,32 @@ html {
 
 .header {
   background-color: #006157;
+  grid-area: 1 / 1 / 2 / 4;
+
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-area: 2 / 1 / 5 / 2;
 }
 
 .nav {
   background-color: #642cde;
+  grid-area: 2 / 2 / 3 / 4
 }
 
 .article {
   background-color: #7E1DC3;
+  /*grid-area: 3 / 2 / 4 / 4;*/
+  grid-row-start: 3;
+  grid-row-end: 5;
+  grid-column-start: 2;
+  grid-column-end: 4;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-area: 5 / 1 / 6 / 4;
 }
 
 .article p {
