--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,8 +5,11 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(13, 8vh);
 }
-
+ 
 .container div {
   padding: 15px;
   font-size: 32px;
@@ -17,15 +20,38 @@
 
 .header {
   background-color: #393f4d;
+  grid-column-start: 1;
+  grid-column-end: 6;
+  grid-row-start: 1;
+  grid-row-end: 3;
+  display: flex;
+  flex-direction: row;
+}
+
+.menu {
+  margin-left: 20%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+  display: grid;
+  grid-template-columns: repeat(4, 25vh);
+  align-items: center;
 }
 
 .sidebar {
   background-color: #C50208;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 3;
+  grid-row-end: 13;
+  display: flex;
+  flex-direction: column;
+
 }
 
 .sidebar .photo {
@@ -34,6 +60,9 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  height: 20%;
+  width: 80%;
+  margin: 20px;
 }
 
 
@@ -42,10 +71,23 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  border-radius: 10px;
+  height: 20%;
+  width: 80%;
+  margin: 20px;
 }
 
 .nav {
   background-color: #C50208;
+  grid-column-start: 2;
+  grid-column-end: 6;
+  grid-row-start: 3;
+  grid-row-end: 4;
+}
+
+.nav ul {
+  display: grid;
+  grid-template-columns: 50vh 50vh 50vh;
 }
 
 .nav ul li {
@@ -55,6 +97,14 @@
 
 .article {
   background-color: #bccbde;
+  grid-column-start: 2;
+  grid-column-end: 6;
+  grid-row-start: 4;
+  grid-row-end: 13;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 48vh);
+  gap: 20px;  
+
 }
 
 .article p {
@@ -68,6 +118,8 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  border: 2px;
+  border-color: black;
 }
 
 .card p {
@@ -83,6 +135,10 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column-start: 1;
+  grid-column-end: 6;
+  grid-row-start: 13;
+  grid-row-end: 14;
 }
 
 .footer p {
